<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/goToViewAnimBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/view_anim"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/goToMotionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToViewAnimBtn"
        android:text="@string/motion_anim"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/goToCircleMotionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToMotionBtn"
        android:text="@string/circle_motion"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/goToCircleAnimationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToCircleMotionBtn"
        android:text="@string/circle_animation"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/valueAnimatorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToCircleAnimationBtn"
        android:text="@string/value_animator"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/sharedAnimationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToCircleAnimationBtn"
        android:text="@string/shared_activity_animation"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
